<resources>
    <string name="app_name">Kotlin Build</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_user">"username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_conform_password">Conform Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_hint">"Don't have an account?"</string>
    <string name="create">Create</string>

</resources>