<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/background"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity">


    <TextView
        android:id="@+id/Kotlin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="30sp"
        android:layout_marginTop="20dp"
        android:text="@string/app_name"/>

    <ProgressBar
        android:id="@+id/progress_circular"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true" />

    <androidx.cardview.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_below="@+id/Kotlin"
        android:layout_marginTop="80dp"
        android:layout_centerHorizontal="true"
        android:layout_width="300dp"
        android:layout_height="350dp"
        card_view:cardCornerRadius="8dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_gravity="center_vertical|center_horizontal"
                android:text="@string/login"
                android:textSize="30dp"
                />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    card_view:startIconDrawable="@drawable/ic_baseline_person_24"
                    android:layout_marginTop="20dp"
                    android:hint="@string/prompt_user"
                    android:layout_height="wrap_content">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:id="@+id/login_user"
                        android:layout_height="wrap_content"/>
                </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_marginTop="20dp"
                card_view:passwordToggleEnabled="true"
                android:hint="@string/prompt_password"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                   android:maxLines="1"
                    android:singleLine="true"
                    android:id="@+id/login_password"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>
            <Button
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:text="@string/login"
                android:background="@drawable/round_button"
                  android:layout_marginTop="20dp"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/forgot_password"
                android:onClick="forgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="forgot password?"
                android:textColor="@drawable/text_state"
                android:clickable="true"
                android:layout_marginTop="15dp"
                android:layout_gravity="center_horizontal|center_vertical"
                android:textSize="15sp"
                />
        </LinearLayout>

    </androidx.cardview.widget.CardView>
    <TextView
        android:id="@+id/account"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/card_view"
        android:layout_marginTop="20dp"
        android:text="@string/sign_up_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/account"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textColor="@drawable/text_state"
        android:clickable="true"
        android:text="CLICK HERE"
        android:textSize="15sp" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/google_auth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp" />



</RelativeLayout>