<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".activity.SignUpActivity">

    <ProgressBar
        android:id="@+id/progress_circular2"
        android:layout_width="50dp"
        android:layout_height="50dp"
        card_view:layout_constraintBottom_toTopOf="@+id/card_view2"
        card_view:layout_constraintEnd_toEndOf="parent"
        card_view:layout_constraintStart_toStartOf="parent"
        card_view:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view2"
        android:layout_width="300dp"
        android:layout_height="400dp"
        card_view:cardCornerRadius="8dp"
        android:layout_marginBottom="150dp"
        card_view:layout_constraintBottom_toBottomOf="parent"
        card_view:layout_constraintEnd_toEndOf="parent"
        card_view:layout_constraintStart_toStartOf="parent"
        card_view:layout_constraintTop_toTopOf="@id/progress_circular2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_marginTop="20dp"
                android:text="@string/sign_up"
                android:textSize="30dp" />

            <com.google.android.material.textfield.TextInputLayout
                card_view:startIconDrawable="@drawable/ic_baseline_person_24"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/prompt_user">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/sign_up_user"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:passwordToggleEnabled="true"
                android:layout_marginTop="20dp"
                android:hint="@string/prompt_password">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/sign_up_password"
                    android:layout_width="match_parent"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                card_view:passwordToggleEnabled="true"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/prompt_conform_password">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/sign_conform_password"
                    android:layout_width="match_parent"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_marginTop="20dp"
                android:background="@drawable/round_button"
                android:onClick="signIn"
                android:text="@string/sign_up" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>